RESOLVED FIXED203385
REGRESSION(r251409) Service worker connection should not be established without service worker entitlement
https://bugs.webkit.org/show_bug.cgi?id=203385
Summary REGRESSION(r251409) Service worker connection should not be established witho...
Alex Christensen
Reported 2019-10-24 15:44:31 PDT
REGRESSION(r251409) Service worker connection should not be established without service worker entitlement
Attachments
Patch (1.55 KB, patch)
2019-10-24 15:45 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-10-24 15:45:52 PDT
Alex Christensen
Comment 2 2019-10-24 15:45:55 PDT
Alex Christensen
Comment 3 2019-10-24 15:48:55 PDT
Note You need to log in before you can comment on or make changes to this bug.