REGRESSION(r251409) Service worker connection should not be established without service worker entitlement https://bugs.webkit.org/show_bug.cgi?id=203385 <rdar://problem/37790257>

Reviewed by Chris Dumez.

r251409 introduced a new call to establishSWServerConnection that should have an entitlement check.
This was caught by a unit test in CI that is not easy to reproduce in WebKit's test.  See the radar.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::NetworkConnectionToWebProcess):



Canonical link: https://commits.webkit.org/216799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251568 268f45cc-cd09-0410-ab3c-d52691b4dbfc